// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkCustodianState not in trading 1`] = `"orderBook"`;

exports[`checkCustodianState not in trading 2`] = `
Object {
  "pair": "orderBookSnapshot",
  "version": 1234567890,
}
`;

exports[`checkCustodianState not in trading 3`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "pair": "orderBookSnapshot",
      "version": 1234567890,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 123,
      "updates": Array [
        Object {
          "change": 456,
          "count": -2,
          "price": 123,
          "side": "bid",
        },
        Object {
          "change": 123,
          "count": -3,
          "price": 456,
          "side": "ask",
        },
      ],
      "version": 1234567890,
    },
  ],
]
`;

exports[`checkCustodianState not in trading 4`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderUpdate add 1`] = `
Array [
  Array [
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 0,
        "initialSequence": 1,
        "matching": 0,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "add",
    },
  ],
]
`;

exports[`handleOrderUpdate add 2`] = `
Array [
  Array [
    Array [
      "orderBookLevelUpdate",
    ],
  ],
]
`;

exports[`handleOrderUpdate add match 1`] = `
Array [
  Array [
    "orderMatchRequests",
  ],
]
`;

exports[`handleOrderUpdate add match 2`] = `
Array [
  Array [
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 0,
        "initialSequence": 1,
        "matching": 0,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "add",
    },
  ],
]
`;

exports[`handleOrderUpdate add match 3`] = `
Array [
  Array [
    Array [
      "orderBookLevelUpdate",
      "orderBookLevelUpdates1",
      "orderBookLevelUpdates2",
    ],
  ],
]
`;

exports[`handleOrderUpdate custodian not in trading 1`] = `
Array [
  Array [
    "orderHash1",
  ],
]
`;

exports[`handleOrderUpdate loadingOrders 1`] = `
Array [
  Object {
    "liveOrder": Object {
      "account": "account1",
      "amount": 10,
      "balance": 5,
      "createdAt": 1234567890,
      "currentSequence": 5,
      "expiry": 1234567890000,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 0,
      "initialSequence": 1,
      "matching": 0,
      "orderHash": "orderHash1",
      "pair": "pair",
      "price": 100,
      "side": "bid",
    },
    "method": "add",
    "processRetry": 0,
    "requestor": "requestor",
    "status": "status",
  },
]
`;

exports[`handleOrderUpdate terminate 1`] = `
Array [
  Array [
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 0,
        "initialSequence": 1,
        "matching": 0,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "terminate",
    },
  ],
]
`;

exports[`handleOrderUpdate terminate 2`] = `
Array [
  Array [
    Array [
      "orderBookLevelUpdate",
    ],
  ],
]
`;

exports[`handleOrderUpdate terminate a non existing liveOrder 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`initialize 1`] = `
Array [
  Array [
    [Function],
    10000,
  ],
  Array [
    [Function],
    900000,
  ],
]
`;

exports[`initialize 2`] = `
Array [
  Array [
    "dualClassWrapper",
  ],
  Array [
    "dualClassWrapper",
  ],
]
`;

exports[`initialize 3`] = `
Array [
  Array [
    "code1|code2",
    [Function],
  ],
]
`;

exports[`initialize 4`] = `
Array [
  Array [
    "channel",
    "orderQueueItem",
  ],
]
`;

exports[`loadLiveOrders 1`] = `"orderBook"`;

exports[`loadLiveOrders 2`] = `"orderBookSnapshot"`;

exports[`loadLiveOrders 3`] = `
Array [
  Array [
    "liveOrders",
  ],
]
`;

exports[`loadLiveOrders 4`] = `
Array [
  Array [
    "code1|code2",
    "orderBook",
  ],
]
`;

exports[`loadLiveOrders 5`] = `
Array [
  Array [
    "orderBook",
    "liveOrders",
    false,
  ],
]
`;

exports[`loadLiveOrders 6`] = `
Array [
  Array [
    "orderMatchRequests",
  ],
]
`;

exports[`loadLiveOrders 7`] = `
Array [
  Array [
    "code1|code2",
    "orderBookSnapshot",
  ],
]
`;

exports[`loadLiveOrders 8`] = `
Array [
  Array [
    "pending",
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 0,
        "initialSequence": 1,
        "matching": 0,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "add",
      "processRetry": 0,
      "requestor": "requestor",
      "status": "status",
    },
  ],
]
`;

exports[`loadLiveOrders no match 1`] = `"orderBook"`;

exports[`loadLiveOrders no match 2`] = `"orderBookSnapshot"`;

exports[`loadLiveOrders no match 3`] = `
Array [
  Array [
    "liveOrders",
  ],
]
`;

exports[`loadLiveOrders no match 4`] = `
Array [
  Array [
    "code1|code2",
    "orderBook",
  ],
]
`;

exports[`loadLiveOrders no match 5`] = `
Array [
  Array [
    "orderBook",
    "liveOrders",
    false,
  ],
]
`;

exports[`loadLiveOrders no match 6`] = `
Array [
  Array [
    "code1|code2",
    "orderBookSnapshot",
  ],
]
`;

exports[`startServer 1`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0xa869BB78A3eEb6F6F47f131EDE3dFfF19578674B",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0xC17Dcd4899b65742B439c551743f1b5e140deF4e",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0xD697eb5a080590E14e00fd355CeB547Fb5B32dE1",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
    },
    "custodian",
  ],
]
`;

exports[`startServer 2`] = `
Array [
  Array [
    null,
    "https://kovan.infura.io/",
    "",
    false,
  ],
]
`;

exports[`startServer, isDualClass false 1`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0xa869BB78A3eEb6F6F47f131EDE3dFfF19578674B",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0xC17Dcd4899b65742B439c551743f1b5e140deF4e",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0xD697eb5a080590E14e00fd355CeB547Fb5B32dE1",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
    },
    "0xd697eb5a080590e14e00fd355ceb547fb5b32de1",
  ],
]
`;

exports[`startServer, isDualClass false 2`] = `
Array [
  Array [
    null,
    "https://kovan.infura.io/",
    "",
    false,
  ],
  Array [
    null,
    "https://kovan.infura.io/",
    "",
    false,
  ],
]
`;

exports[`startServer, server 1`] = `
Array [
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0xa869BB78A3eEb6F6F47f131EDE3dFfF19578674B",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0xC17Dcd4899b65742B439c551743f1b5e140deF4e",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0xD697eb5a080590E14e00fd355CeB547Fb5B32dE1",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
    },
    "custodian",
  ],
  Array [
    Object {
      "contractAddresses": Object {
        "Custodians": Object {
          "Beethoven": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0xB608f08d94662453ac8fce91f5956CCd00031449",
                "code": "aETH-M19",
              },
              "bToken": Object {
                "address": "0xe6c92061a8890FFC429485c36fa76853ddC4f07D",
                "code": "bETH-M19",
              },
              "custodian": Object {
                "address": "0x1e20057a6Ddc009b275926d7d54cCA19625c974E",
                "code": "BEETHOVEN-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x59E6B3d43F762310626d2905148939973db2BBd3",
                "code": "aETH",
              },
              "bToken": Object {
                "address": "0x8A3bEca74E0E737460bDE45a09594A8D7D8c9886",
                "code": "bETH",
              },
              "custodian": Object {
                "address": "0x13016f27945f3f7b39A5Daae068D698e34E55491",
                "code": "BEETHOVEN-PPT",
              },
            },
          },
          "Mozart": Object {
            "M19": Object {
              "aToken": Object {
                "address": "0x2B675f1A282954Ce4FEeb93b9504a6f78B616DE9",
                "code": "sETH-M19",
              },
              "bToken": Object {
                "address": "0x47aC357b44d1b3A0799D91741fA1bD717C1f7900",
                "code": "LETH-M19",
              },
              "custodian": Object {
                "address": "0x56e2727e56F9D6717e462418f822a8FE08Be4711",
                "code": "MOZART-M19",
              },
            },
            "Perpetual": Object {
              "aToken": Object {
                "address": "0x2cB7CDDF82AD7fF2b207AD43586976FEB19BA985",
                "code": "sETH",
              },
              "bToken": Object {
                "address": "0x977feC72C295EdAf7E7deA5681E42CaFf69749e3",
                "code": "LETH",
              },
              "custodian": Object {
                "address": "0x00be45Fe5903AB1b33a9d3969b05b29552a6d18b",
                "code": "MOZART-PPT",
              },
            },
          },
          "Vivaldi": Object {
            "095P-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-095P-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-095C-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-095P-3H",
              },
            },
            "100C-3H": Object {
              "aToken": Object {
                "address": "0xa869BB78A3eEb6F6F47f131EDE3dFfF19578674B",
                "code": "ETH-100C-3H",
              },
              "bToken": Object {
                "address": "0xC17Dcd4899b65742B439c551743f1b5e140deF4e",
                "code": "ETH-100P-3H",
              },
              "custodian": Object {
                "address": "0xD697eb5a080590E14e00fd355CeB547Fb5B32dE1",
                "code": "VIVALDI-100C-3H",
              },
            },
            "105C-3H": Object {
              "aToken": Object {
                "address": "0x0",
                "code": "ETH-105C-3H",
              },
              "bToken": Object {
                "address": "0x0",
                "code": "ETH-105P-3H",
              },
              "custodian": Object {
                "address": "0x0",
                "code": "VIVALDI-105C-3H",
              },
            },
          },
        },
        "MultiSigManagers": Array [
          Object {
            "address": "0xD728681490d63582047A6Cd2fC80B1343C6AbA20",
            "code": "Esplanade",
          },
        ],
        "Oracles": Array [
          Object {
            "address": "0x0d729B3C11b3E6Bf5792d36f640f3Be6f187Dd67",
            "code": "Magi",
          },
        ],
      },
    },
    "custodian",
  ],
]
`;

exports[`startServer, server 2`] = `
Array [
  Array [
    null,
    "https://kovan.infura.io/",
    "",
    false,
  ],
  Array [
    null,
    "https://kovan.infura.io/",
    "",
    false,
  ],
  Array [
    null,
    "https://mainnet.infura.io/",
    "",
    true,
  ],
]
`;

exports[`startServer, server 3`] = `
Array [
  Array [
    [Function],
    15000,
  ],
]
`;

exports[`startServer, server 4`] = `
Array [
  Array [
    "code|WETH",
  ],
  Array [
    "code|WETH",
    0,
  ],
]
`;

exports[`terminateOrder 1`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "code1|code2",
      "requestor": "orderBooks",
      "status": "reset",
    },
  ],
]
`;

exports[`updateOrderBook add 1`] = `
Object {
  "change": 456,
  "count": 1,
  "price": 123,
  "side": "bid",
}
`;

exports[`updateOrderBook add 2`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
    },
    Object {
      "balance": 456,
      "initialSequence": 111,
      "orderHash": "orderHash",
      "price": 123,
    },
    true,
    false,
  ],
]
`;

exports[`updateOrderBook add 3`] = `
Object {
  "orderHash": Object {
    "balance": 456,
    "initialSequence": 111,
    "orderHash": "orderHash",
    "price": 123,
    "side": "bid",
  },
}
`;

exports[`updateOrderBook terminate 1`] = `
Object {
  "change": -400,
  "count": 1,
  "price": 123,
  "side": "bid",
}
`;

exports[`updateOrderBook terminate 2`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
    },
    Object {
      "balance": 400,
      "initialSequence": 111,
      "orderHash": "orderHash",
      "price": 123,
    },
    true,
    true,
  ],
]
`;

exports[`updateOrderBook update 1`] = `
Object {
  "change": -56,
  "count": 0,
  "price": 123,
  "side": "bid",
}
`;

exports[`updateOrderBook update 2`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
    },
    Object {
      "balance": 400,
      "initialSequence": 111,
      "orderHash": "orderHash",
      "price": 123,
    },
    true,
    false,
  ],
]
`;

exports[`updateOrderBook update 3`] = `
Object {
  "orderHash": Object {
    "balance": 400,
    "initialSequence": 111,
    "orderHash": "orderHash",
    "price": 123,
    "side": "bid",
  },
}
`;

exports[`updateOrderBookSnapshot 1`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 0,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 0,
      "updates": Array [
        Object {
          "change": 1,
          "count": 0,
          "price": 1,
          "side": "bid",
        },
        Object {
          "change": 2,
          "count": 1,
          "price": 2,
          "side": "bid",
        },
      ],
      "version": 1234567890,
    },
  ],
]
`;

exports[`updateOrderBookSnapshot 2`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 0,
    },
    Object {
      "pair": "code1|code2",
      "prevVersion": 0,
      "updates": Array [
        Object {
          "change": 1,
          "count": 0,
          "price": 1,
          "side": "bid",
        },
        Object {
          "change": 2,
          "count": 1,
          "price": 2,
          "side": "bid",
        },
      ],
      "version": 1234567890,
    },
  ],
]
`;

exports[`updateOrderSequences 1`] = `16`;

exports[`updateOrderSequences 2`] = `
Object {
  "orderHash1": 5,
  "orderHash2": 6,
  "orderHash3": 7,
  "orderHash4": 8,
  "orderHash5": 13,
  "orderHash6": 14,
  "orderHash7": 15,
  "orderHash8": 16,
}
`;
